[Home]

Summary:ASTERISK-20254: HTTP Error Bindaddr
Reporter:Andrew Latham (lathama)Labels:
Date Opened:2012-08-17 17:45:57Date Closed:2012-08-17 21:12:07
Priority:MajorRegression?No
Status:Closed/CompleteComponents:Core/HTTP
Versions:SVN Frequency of
Occurrence
Related
Issues:
Environment:Attachments:( 0) http.diff
Description:svn praise main/http.c | grep Got
293273 mmichelson                                       ast_log(LOG_WARNING, "Got %d addresses\n", num_addrs);

I don't think this needs to be a warning.  Maybe we don't need this at all.
Comments: